--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <h2>Video Prewedding</h2>
  <div class="video-wrapper">
     <video id="video-prewed" controls>
-        <source src="a7x gs.mp4" type="video/mp4">
+        <source src="video_prewed.mp4" type="video/mp4">
         Browser Anda tidak mendukung pemutar video ini.
     </video>
 </div>
@@ -178,3 +178,4 @@
     <i class="fas fa-spin fa-compact-disc"></i>
   </div>
 </main>
+
